basic layout created

--- a/index.html
+++ b/index.html
@@ -6,14 +6,80 @@
 	<meta name="viewport" content="width=device-width">
 	<meta name="author" content="trip pruitt">
 
-	<title>Roll Tide</title>
+	<title>boxOut</title>
 
 	<link rel="stylesheet" type="text/css" href="assets/css/normalize.css">
+	<link href='http://fonts.googleapis.com/css?family=Roboto+Condensed:700|Open+Sans:400,600' rel='stylesheet' type='text/css'>
 	<link rel="stylesheet" type="text/css" href="assets/css/main.css">
+
+	<script type="text/javascript" src="assets/js/vendor/modernizr.js"></script>
 </head>
 <body>
+	<div class="wrap">
+		<section class="hero">
+			<h1>boxOut</h1>
 
+			<p>Cupim drumstick capicola pancetta beef pig andouille frankfurter t-bone alcatra bacon boudin picanha. Salami pancetta pork tri-tip doner short ribs. Kevin flank andouille tongue pork belly shank meatball. Venison ball tip ribeye porchetta, meatloaf frankfurter ground round turducken. Sirloin t-bone capicola, cow andouille doner jowl ground round chicken.</p>
+
+			<p>Tenderloin alcatra cow shankle pork chop beef, kevin drumstick prosciutto meatball sausage doner chuck. Shankle capicola drumstick landjaeger beef. Short ribs capicola sirloin chuck, t-bone turducken pork chop. Pig andouille biltong corned beef meatball prosciutto cow kielbasa porchetta kevin brisket doner. Swine sirloin bresaola ground round tail. Hamburger ground round swine sausage. Tenderloin filet mignon venison turkey ground round biltong fatback meatball salami rump pork loin.</p>
+
+			<p>Tenderloin pork loin ground round, rump brisket ham hock frankfurter turkey shank. Leberkas prosciutto pastrami tri-tip cupim. Fatback ground round meatloaf, jowl sirloin pork loin spare ribs salami swine jerky chuck. Spare ribs ground round ham hock, shank pig strip steak landjaeger fatback flank kielbasa ham. Fatback pastrami drumstick meatball, ball tip turducken landjaeger doner.</p>
+		</section><!-- /hero -->
+
+		<section class="content">
+			<div class="box1">
+				<h2>bacon</h2>
+
+				<div>
+					<p>Beef ribs jowl spare ribs ribeye, sirloin tenderloin bresaola brisket pork venison rump beef strip steak. Beef ribs kielbasa corned beef prosciutto pork loin. Corned beef biltong meatloaf, short ribs frankfurter capicola landjaeger doner pork chop chuck picanha tongue shank. Andouille cupim cow short ribs t-bone jerky. Corned beef doner cupim pancetta, boudin filet mignon alcatra chuck bacon tail ball tip rump.</p>
+				</div>
+
+				<div class="linkWrap">
+					<a href="#">more&#8230;</a>
+				</div>
+			</div>
+
+			<div class="box2">
+				<h2>ribeye</h2>
+
+				<div>
+					<p>Jerky tail pancetta jowl pork loin, meatloaf ground round capicola filet mignon turducken brisket ham hock sirloin. Ham corned beef bresaola picanha, drumstick ground round kielbasa cow swine kevin bacon. Pig shank meatball beef ribs picanha ribeye ground round cow tri-tip. Rump chicken ham meatball, pastrami salami prosciutto pancetta fatback cow beef ribs jowl sausage hamburger. Ribeye leberkas boudin, ham hock pork loin doner spare ribs. Venison beef bacon, ribeye turkey tri-tip meatball short loin. Ribeye ball tip turkey spare ribs picanha chuck turducken.</p>
+				</div>
+
+				<div class="linkWrap">
+					<a href="#">more&#8230;</a>
+				</div>
+			</div>
+
+			<div class="box3">
+				<h2>t-bone</h2>
+
+				<div>
+					<p>Biltong beef ribs cow, corned beef drumstick ham hock pork ground round. Cow bacon tri-tip beef sirloin t-bone brisket salami swine picanha turducken ball tip beef ribs. Beef bacon corned beef, sirloin pork chop picanha flank kevin brisket short loin prosciutto pancetta rump cupim. Jowl alcatra ribeye brisket turkey hamburger pork belly cow pastrami meatloaf flank tongue. Porchetta jerky bresaola tenderloin. Salami pancetta hamburger kielbasa. T-bone hamburger sausage, fatback corned beef pig ham.</p>
+				</div>
+
+				<div class="linkWrap">
+					<a href="#">more&#8230;</a>
+				</div>
+			</div>
+
+			<div class="box4">
+				<h2>more bacon</h2>
+
+				<div>
+					<p>Filet mignon boudin doner, cow landjaeger turkey bacon fatback chicken turducken kevin. Bresaola tri-tip pig, boudin fatback salami turducken beef beef ribs strip steak drumstick frankfurter sausage pork loin cupim. Landjaeger shoulder salami shankle, doner ground round fatback picanha boudin. Tail spare ribs drumstick venison kielbasa picanha tenderloin.</p>
+				</div>
+
+				<div class="linkWrap">
+					<a href="#">more&#8230;</a>
+				</div>
+			</div>
+		</section><!-- /content -->
+
+	</div><!-- /wrap -->
 
 	<script type="text/javascript" src="http://code.jquery.com/jquery-1.10.2.min.js"></script>
+	<script type="text/javascript" src="assets/js/vendor/vendor.js"></script>
+	<script type="text/javascript" src="assets/js/custom/app.js"></script>
 </body>
 </html>
