--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 		</section><!-- /hero -->
 
 		<section class="content">
-			<div class="box1">
+			<div class="box box1">
 				<h2>bacon</h2>
 
 				<div>
@@ -39,7 +39,7 @@
 				</div>
 			</div>
 
-			<div class="box2">
+			<div class="box box2">
 				<h2>ribeye</h2>
 
 				<div>
@@ -51,7 +51,7 @@
 				</div>
 			</div>
 
-			<div class="box3">
+			<div class="box box3">
 				<h2>t-bone</h2>
 
 				<div>
@@ -63,7 +63,7 @@
 				</div>
 			</div>
 
-			<div class="box4">
+			<div class="box box4">
 				<h2>more bacon</h2>
 
 				<div>
