added clearfix for clearing floats

--- a/index.html
+++ b/index.html
@@ -74,6 +74,7 @@
 					<a href="#">more&#8230;</a>
 				</div>
 			</div>
+			<div class="clearfix"></div>
 		</section><!-- /content -->
 
 	</div><!-- /wrap -->
