all styles applied

--- a/demo/index.html
+++ b/demo/index.html
@@ -8,24 +8,30 @@
 
 	<title>boxOut</title>
 
-	<link rel="stylesheet" type="text/css" href="assets/css/normalize.css">
-	<link href='http://fonts.googleapis.com/css?family=Roboto+Condensed:700|Open+Sans:400,600' rel='stylesheet' type='text/css'>
-	<link rel="stylesheet" type="text/css" href="assets/css/main.css">
+	<link rel="stylesheet" type="text/css" href="../src/css/normalize.css">
+	<link href='http://fonts.googleapis.com/css?family=Roboto:500,400|Roboto+Condensed:700' rel='stylesheet' type='text/css'>
+	<link rel="stylesheet" type="text/css" href="../src/css/main.css">
 
-	<script type="text/javascript" src="assets/js/vendor/modernizr.js"></script>
+	<!-- Favicon - SVG, PNG, ICO -->
+    <link rel="icon" type="image/svg+xml" href="../src/img/favicon.svg">
+  	<link rel="shortcut icon" type="image/png" href="../src/img/favicon.png">
+  	<link rel="shortcut icon" type="image/x-icon" href="../src/img/favicon.ico">
+
+	<script type="text/javascript" src="../src/js/vendor/modernizr.js"></script>
 </head>
 <body>
 	<div class="wrap">
-		<section class="hero">
+		<header>
 			<h1>boxOut</h1>
+		</header>
 
+		<section class="hero">
 			<p>Cupim drumstick capicola pancetta beef pig andouille frankfurter t-bone alcatra bacon boudin picanha. Salami pancetta pork tri-tip doner short ribs. Kevin flank andouille tongue pork belly shank meatball. Venison ball tip ribeye porchetta, meatloaf frankfurter ground round turducken. Sirloin t-bone capicola, cow andouille doner jowl ground round chicken.</p>
 
 			<p>Tenderloin alcatra cow shankle pork chop beef, kevin drumstick prosciutto meatball sausage doner chuck. Shankle capicola drumstick landjaeger beef. Short ribs capicola sirloin chuck, t-bone turducken pork chop. Pig andouille biltong corned beef meatball prosciutto cow kielbasa porchetta kevin brisket doner. Swine sirloin bresaola ground round tail. Hamburger ground round swine sausage. Tenderloin filet mignon venison turkey ground round biltong fatback meatball salami rump pork loin.</p>
-
-			<p>Tenderloin pork loin ground round, rump brisket ham hock frankfurter turkey shank. Leberkas prosciutto pastrami tri-tip cupim. Fatback ground round meatloaf, jowl sirloin pork loin spare ribs salami swine jerky chuck. Spare ribs ground round ham hock, shank pig strip steak landjaeger fatback flank kielbasa ham. Fatback pastrami drumstick meatball, ball tip turducken landjaeger doner.</p>
 		</section><!-- /hero -->
 
+		<!-- ***** PLUGIN MAGIC ***** -->
 		<section class="content">
 			<div class="box box1">
 				<h2>bacon</h2>
@@ -76,11 +82,37 @@
 			</div>
 			<div class="clearfix"></div>
 		</section><!-- /content -->
+		<!-- ***** END PLUGIN MAGIC ***** -->
 
+		<section class="extraBacon">
+			<div class="meat1">
+				<h3>sausage</h3>
+
+				<p>Sausage alcatra flank ground round jowl chicken tenderloin ball tip short loin beef ribs. Jowl biltong boudin tenderloin, rump pork bacon t-bone frankfurter andouille. Brisket cow leberkas, flank turkey shoulder tongue andouille venison meatball picanha beef ribs. Swine andouille short ribs, sirloin pancetta hamburger pork loin tongue.</p>
+			</div>
+
+			<div class="meat2">
+				<h3>burger</h3>
+
+				<p>Swine kevin sausage tongue cow sirloin pig, chicken short loin doner prosciutto biltong venison boudin. Pork loin kevin sausage cow, short ribs venison drumstick rump. Tail flank shank pork loin ham hock. Beef ribs kielbasa prosciutto doner kevin ball tip rump capicola chicken tongue.</p>
+			</div>
+
+			<div class="meat3">
+				<h3>hot dog</h3>
+
+				<p>Ribeye bresaola landjaeger pork meatball. Pancetta t-bone bresaola pork landjaeger. Andouille meatball pork loin turkey filet mignon pork cupim tail chicken ham pork chop. Brisket ribeye shankle, cupim pork belly leberkas pastrami sirloin alcatra flank filet mignon spare ribs.</p>
+			</div>
+			<div class="clearfix"></div>
+		</section><!-- /extraBacon -->
+
+		<footer>
+			<p>&copy; 2015 Vroom Digital</p>
+			<p><a href="http://www.wtfpl.net/" target="_blank"><span class="caps">Wtfpl</span> license</a></p>
+		</footer>
 	</div><!-- /wrap -->
 
 	<script type="text/javascript" src="http://code.jquery.com/jquery-1.10.2.min.js"></script>
-	<script type="text/javascript" src="assets/js/vendor/vendor.js"></script>
-	<script type="text/javascript" src="assets/js/custom/app.js"></script>
+	<script type="text/javascript" src="../src/js/vendor/vendor.js"></script>
+	<script type="text/javascript" src="../src/js/custom/app.js"></script>
 </body>
 </html>
