working on script to close box

--- a/demo/index.html
+++ b/demo/index.html
@@ -34,50 +34,94 @@
 		<!-- ***** PLUGIN MAGIC ***** -->
 		<section class="content">
 			<div class="box box1">
-				<h2>bacon</h2>
+				<div class="titleWrap">
+					<h2>bacon</h2>
+					<div class="closeWrap">
+						<a href="#">
+							<svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+								 width="26.4px" height="26.4px" viewBox="0 0 26.4 26.4" enable-background="new 0 0 26.4 26.4" xml:space="preserve">
+								<line fill="none" stroke="#222222" stroke-width="2" stroke-miterlimit="10" x1="0.7" y1="0.7" x2="25.7" y2="25.7"/>
+								<line fill="none" stroke="#222222" stroke-width="2" stroke-miterlimit="10" x1="25.7" y1="0.7" x2="0.7" y2="25.7"/>
+							</svg>
+						</a>
+					</div>
+				</div><!-- /titleWrap -->
 
-				<div>
+				<div class="boxText">
 					<p>Beef ribs jowl spare ribs ribeye, sirloin tenderloin bresaola brisket pork venison rump beef strip steak. Beef ribs kielbasa corned beef prosciutto pork loin. Corned beef biltong meatloaf, short ribs frankfurter capicola landjaeger doner pork chop chuck picanha tongue shank. Andouille cupim cow short ribs t-bone jerky. Corned beef doner cupim pancetta, boudin filet mignon alcatra chuck bacon tail ball tip rump.</p>
 				</div>
 
 				<div class="linkWrap">
-					<a href="#">more&#8230;</a>
+					<a href="#" class="viewMore">more&#8230;</a>
 				</div>
 			</div>
 
 			<div class="box box2">
-				<h2>ribeye</h2>
+				<div class="titleWrap">
+					<h2>ribeye</h2>
+					<div class="closeWrap">
+						<a href="#">
+							<svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+								 width="26.4px" height="26.4px" viewBox="0 0 26.4 26.4" enable-background="new 0 0 26.4 26.4" xml:space="preserve">
+								<line fill="none" stroke="#222222" stroke-width="2" stroke-miterlimit="10" x1="0.7" y1="0.7" x2="25.7" y2="25.7"/>
+								<line fill="none" stroke="#222222" stroke-width="2" stroke-miterlimit="10" x1="25.7" y1="0.7" x2="0.7" y2="25.7"/>
+							</svg>
+						</a>
+					</div>
+				</div><!-- /titleWrap -->
 
-				<div>
+				<div class="boxText">
 					<p>Jerky tail pancetta jowl pork loin, meatloaf ground round capicola filet mignon turducken brisket ham hock sirloin. Ham corned beef bresaola picanha, drumstick ground round kielbasa cow swine kevin bacon. Pig shank meatball beef ribs picanha ribeye ground round cow tri-tip. Rump chicken ham meatball, pastrami salami prosciutto pancetta fatback cow beef ribs jowl sausage hamburger. Ribeye leberkas boudin, ham hock pork loin doner spare ribs. Venison beef bacon, ribeye turkey tri-tip meatball short loin. Ribeye ball tip turkey spare ribs picanha chuck turducken.</p>
 				</div>
 
 				<div class="linkWrap">
-					<a href="#">more&#8230;</a>
+					<a href="#" class="viewMore">more&#8230;</a>
 				</div>
 			</div>
 
 			<div class="box box3">
-				<h2>t-bone</h2>
+				<div class="titleWrap">
+					<h2>t-bone</h2>
+					<div class="closeWrap">
+						<a href="#">
+							<svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+								 width="26.4px" height="26.4px" viewBox="0 0 26.4 26.4" enable-background="new 0 0 26.4 26.4" xml:space="preserve">
+								<line fill="none" stroke="#222222" stroke-width="2" stroke-miterlimit="10" x1="0.7" y1="0.7" x2="25.7" y2="25.7"/>
+								<line fill="none" stroke="#222222" stroke-width="2" stroke-miterlimit="10" x1="25.7" y1="0.7" x2="0.7" y2="25.7"/>
+							</svg>
+						</a>
+					</div>
+				</div><!-- /titleWrap -->
 
-				<div>
+				<div class="boxText">
 					<p>Biltong beef ribs cow, corned beef drumstick ham hock pork ground round. Cow bacon tri-tip beef sirloin t-bone brisket salami swine picanha turducken ball tip beef ribs. Beef bacon corned beef, sirloin pork chop picanha flank kevin brisket short loin prosciutto pancetta rump cupim. Jowl alcatra ribeye brisket turkey hamburger pork belly cow pastrami meatloaf flank tongue. Porchetta jerky bresaola tenderloin. Salami pancetta hamburger kielbasa. T-bone hamburger sausage, fatback corned beef pig ham.</p>
 				</div>
 
 				<div class="linkWrap">
-					<a href="#">more&#8230;</a>
+					<a href="#" class="viewMore">more&#8230;</a>
 				</div>
 			</div>
 
 			<div class="box box4">
-				<h2>more bacon</h2>
+				<div class="titleWrap">
+					<h2>more bacon</h2>
+					<div class="closeWrap">
+						<a href="#">
+							<svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+								 width="26.4px" height="26.4px" viewBox="0 0 26.4 26.4" enable-background="new 0 0 26.4 26.4" xml:space="preserve">
+								<line fill="none" stroke="#222222" stroke-width="2" stroke-miterlimit="10" x1="0.7" y1="0.7" x2="25.7" y2="25.7"/>
+								<line fill="none" stroke="#222222" stroke-width="2" stroke-miterlimit="10" x1="25.7" y1="0.7" x2="0.7" y2="25.7"/>
+							</svg>
+						</a>
+					</div>
+				</div><!-- /titleWrap -->
 
-				<div>
+				<div class="boxText">
 					<p>Filet mignon boudin doner, cow landjaeger turkey bacon fatback chicken turducken kevin. Bresaola tri-tip pig, boudin fatback salami turducken beef beef ribs strip steak drumstick frankfurter sausage pork loin cupim. Landjaeger shoulder salami shankle, doner ground round fatback picanha boudin. Tail spare ribs drumstick venison kielbasa picanha tenderloin.</p>
 				</div>
 
 				<div class="linkWrap">
-					<a href="#">more&#8230;</a>
+					<a href="#" class="viewMore">more&#8230;</a>
 				</div>
 			</div>
 			<div class="clearfix"></div>
