--- a/demo/index.html
+++ b/demo/index.html
@@ -33,11 +33,11 @@
 
 		<!-- ***** PLUGIN MAGIC ***** -->
 		<section class="content">
-			<div class="box box1">
+			<div class="box box1 notExpanded">
 				<div class="titleWrap">
 					<h2>bacon</h2>
 					<div class="closeWrap">
-						<a href="#">
+						<a href="#" class="remove">
 							<svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
 								 width="26.4px" height="26.4px" viewBox="0 0 26.4 26.4" enable-background="new 0 0 26.4 26.4" xml:space="preserve">
 								<line fill="none" stroke="#222222" stroke-width="2" stroke-miterlimit="10" x1="0.7" y1="0.7" x2="25.7" y2="25.7"/>
@@ -56,11 +56,11 @@
 				</div>
 			</div>
 
-			<div class="box box2">
+			<div class="box box2 notExpanded">
 				<div class="titleWrap">
 					<h2>ribeye</h2>
 					<div class="closeWrap">
-						<a href="#">
+						<a href="#" class="remove">
 							<svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
 								 width="26.4px" height="26.4px" viewBox="0 0 26.4 26.4" enable-background="new 0 0 26.4 26.4" xml:space="preserve">
 								<line fill="none" stroke="#222222" stroke-width="2" stroke-miterlimit="10" x1="0.7" y1="0.7" x2="25.7" y2="25.7"/>
@@ -79,11 +79,11 @@
 				</div>
 			</div>
 
-			<div class="box box3">
+			<div class="box box3 notExpanded">
 				<div class="titleWrap">
 					<h2>t-bone</h2>
 					<div class="closeWrap">
-						<a href="#">
+						<a href="#" class="remove">
 							<svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
 								 width="26.4px" height="26.4px" viewBox="0 0 26.4 26.4" enable-background="new 0 0 26.4 26.4" xml:space="preserve">
 								<line fill="none" stroke="#222222" stroke-width="2" stroke-miterlimit="10" x1="0.7" y1="0.7" x2="25.7" y2="25.7"/>
@@ -102,11 +102,11 @@
 				</div>
 			</div>
 
-			<div class="box box4">
+			<div class="box box4 notExpanded">
 				<div class="titleWrap">
 					<h2>more bacon</h2>
 					<div class="closeWrap">
-						<a href="#">
+						<a href="#" class="remove">
 							<svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
 								 width="26.4px" height="26.4px" viewBox="0 0 26.4 26.4" enable-background="new 0 0 26.4 26.4" xml:space="preserve">
 								<line fill="none" stroke="#222222" stroke-width="2" stroke-miterlimit="10" x1="0.7" y1="0.7" x2="25.7" y2="25.7"/>
