--- a/demo/index.html
+++ b/demo/index.html
@@ -156,7 +156,7 @@
 	</div><!-- /wrap -->
 
 	<script type="text/javascript" src="http://code.jquery.com/jquery-1.10.2.min.js"></script>
-	<script type="text/javascript" src="../src/js/vendor/vendor.js"></script>
+	<script type="text/javascript" src="../src/js/vendor/greensock.js"></script>
 	<script type="text/javascript" src="../src/js/custom/app.js"></script>
 </body>
 </html>
